<resources>
    <string name="app_name">Mr phone</string>
    <string name="Login">Login</string>
    <string name="home">Home</string>
    <string name="brands">BRANDS</string>
    <string name="phone">PHONE FINDER</string>
    <string name="Video">VIDEOS</string>
    <string name="Rate">RATE US</string>
    <string name="share">SHARE</string>
    <string name="contact">CONTACT US</string>
    <string name="settings">SETTINGS</string>
    <string name="Home">Home</string>
    <string name="Latest">Latest</string>
    <string name="Top_Charts">Top charts</string>
    <string name="events">Events</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Feeds">Feeds</string>
    <string-array name="NavItem">
        <item>Home</item>
        <item>Latest</item>
        <item>Top Charts</item>
        <item>News feed</item>
        <item>Menu event</item>
    </string-array>
    <string-array name="Country">
        <item>India</item>
        <item>Mexico</item>
        <item>United State</item>
        <item>Germany</item>
        <item>Saudi Arabia</item>
        <item>Algeria</item>
        <item>Argentina</item>
        <item>Spain</item>
        <item>Egypt</item>
        <item>Sri Lanka</item>
        <item>Iraq</item>
        <item>Others</item>
    </string-array>


    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">NEXT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="Later">Later</string>
    <string name="Choose">Choose</string>
    <string name="message">Some feature are country specific!\nChoose your country and let Mr phone\nLook after the rest!</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"Sector 63 noida ghaziabad Uttar Pradesh"</string>
    <string name="price">price</string>
    <string name="Phonefinder">Phone Finder</string>
    <string name="RESET">RESET</string>
    <string name="ok">Ok</string>
    <string name="Cancil">Cancil</string>
    <string name="enterPhone">Enter phone name</string>


</resources>
