<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dim_10"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txttitle"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@android:color/black"
            android:gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="Select country"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtmsg"
            android:layout_marginTop="@dimen/dim_10"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@android:color/black"
            android:gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/message"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_weight="1">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_Later"
                android:gravity="center"
                android:layout_marginLeft="@dimen/dim_20"
                android:textColor="@color/SplashBackground"
                android:background="@android:color/transparent"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"
                android:text="@string/Later"
                android:layout_weight="0.15"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_choose"
                android:textColor="@color/SplashBackground"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:textSize="@dimen/medium_text_size"
                android:layout_gravity="center"
                android:text="@string/Choose"
                android:layout_weight="0.15">

            </Button>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
